--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,26 @@ body,
     height: 100%;
     margin: 0;
 }
+
+.flex-container {
+    height: 300px;
+    width: 700px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.flex-container > div {
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    background: #daa520;
+}
+
+.flex-container > div:nth-child(even) {
+    align-self: center;
+}
+
+.flex-container > div:nth-child(3) {
+    align-self: flex-end;
+}
